Sun Sep 29 22:56:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_id_attrset): fix inconsistency with literals, allow
	  ID_ATTRSET and return it itself, but ID_JUNK cannot make ID_ATTRSET.
	  and raise a NameError instead of rb_bug() for invalid argument.

Sun Sep 29 18:45:05 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_insnhelper.c (vm_callee_setup_arg_complex, vm_yield_setup_block_args):
	  clear keyword arguments to prevent GC bug which occurs
	  while marking VM stack.
	  [ruby-dev:47729] [Bug #8964]

	* test/ruby/test_keyword.rb: tests for the above.

Sat Sep 28 23:25:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (math_log, math_log2, math_log10): fix for Bignum argument.
	  numbits should be add only when right shifted.

Sat Sep 28 14:30:29 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/dl/test_base.rb: {libc, libm} detection now handle GNU/Hurd
	  correctly. Patch by Gabriele Giacone (1o5g4r8o@gmail.com).
	  [Bug #8937][ruby-core:57311]
	* test/fiddle/helper.rb: ditto.

Sat Sep 28 00:19:41 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/curses/extconf.rb: check the size of chtype.

	* ext/curses/curses.c (NUM2CH, CH2NUM): use proper macros for
	  the size of chtype.

	[ruby-core:56090] [Bug #8659]

Fri Sep 27 18:33:23 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: add two GC tuning environment variables.
	  RUBY_GC_MALLOC_LIMIT_MAX and RUBY_GC_MALLOC_LIMIT_GROWTH_FACTOR.
	  See r43067 for details.

	* gc.c (rb_gc_set_params): refactoring. And change verbose notation.
	  Mostly duplicated functions get_envparam_int/double is not cool.
	  Please rewrite it.

	* test/ruby/test_gc.rb: fix a test for this change.

Fri Sep 27 17:44:41 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (GC_MALLOC_LIMIT): 8,000,000 -> 8 * 1,024 * 1,024.

Fri Sep 27 17:19:39 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_before_sweep): cast to size_t to suppress warnings.

Fri Sep 27 17:07:55 2013  Koichi Sasada  <ko1@atdot.net>
