@@ -82,16 +82,16 @@ module Test_Symbol
       assert_symtype("@foo=", :attrset?)
       assert_symtype("@@foo=", :attrset?)
       assert_symtype("$foo=", :attrset?)
-      assert_not_symtype("0=", :attrset?)
-      assert_not_symtype("@=", :attrset?)
-      assert_not_symtype("@@=", :attrset?)
+      assert_symtype("0=", :attrset?)
+      assert_symtype("@=", :attrset?)
+      assert_symtype("@@=", :attrset?)
       assert_not_symtype("foo", :attrset?)
       assert_not_symtype("Foo", :attrset?)
       assert_not_symtype("@foo", :attrset?)
       assert_not_symtype("@@foo", :attrset?)
       assert_not_symtype("$foo", :attrset?)
       assert_not_symtype("[foo]", :attrset?)
-      assert_not_symtype("[foo]=", :attrset?)
+      assert_symtype("[foo]=", :attrset?)
       assert_equal(:"foo=", Bug::Symbol.attrset("foo"))
       assert_symtype(Bug::Symbol.attrset("foo"), :attrset?)
       assert_equal(:"Foo=", Bug::Symbol.attrset("Foo"))
@@ -102,7 +102,8 @@ module Test_Symbol
       assert_symtype(Bug::Symbol.attrset("@@foo"), :attrset?)
       assert_equal(:"$foo=", Bug::Symbol.attrset("$foo"))
       assert_symtype(Bug::Symbol.attrset("$foo"), :attrset?)
-      assert_raise(NameError) {Bug::Symbol.attrset("[foo]")}
+      assert_equal(:"[foo]=", Bug::Symbol.attrset("[foo]"))
+      assert_symtype(Bug::Symbol.attrset("[foo]"), :attrset?)
       assert_equal(:[]=, Bug::Symbol.attrset(:[]))
     end
   end
